Added dockerignore, set containers name. Dependencies are now built separately from the main build. Also modified еру garbage collector used and set the maximum amount of memory it can use.